--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -333,7 +333,12 @@ metaitem.syringe.name=Syringe
 metaitem.sterilized_syringe.name=Sterilized Syringe
 metaitem.sheep_blood_syringe.name=Sheep Blood Syringe
 metaitem.cotton.name=Cotton
-
+metaitem.lithium_sieve.name=Lithium Sieve
+metaitem.lithium_saturated_sieve_lithum.name=Lithium Saturated Lithium Sieve
+metaitem.boron_saturated_yarn.name=Boron Saturated Yarn
+metaitem.boron_retaining_yarn.name=Boron Retaining Yarn
+metaitem.coolant_cell.name=Coolant Cell
+metaitem.nak_coolant_cell.name=NaK Coolant Cell
 
 
 
@@ -342,6 +347,20 @@ metaitem.cotton.name=Cotton
 
 #Materials
 
+
+gregtech.material.damp_bromine=Damp Bromine
+gregtech.material.brominated_brine=Damp Bromine
+gregtech.material.salt_free_brine=Damp Bromine
+gregtech.material.boron_free_solution=Damp Bromine
+gregtech.material.potassium_magnesium_salts=Damp Bromine
+gregtech.material.sodium_salts=Damp Bromine
+gregtech.material.calcium_salts=Damp Bromine
+gregtech.material.lithium_chloride_solution=Damp Bromine
+gregtech.material.iodized_brine=Damp Bromine
+gregtech.material.iodine_slurry=Damp Bromine
+gregtech.material.brine=Damp Bromine
+gregtech.material.crude_bromine_solution=Damp Bromine
+gregtech.material.concentrated_brine=Damp Bromine
 gregtech.material.iso_octane=Iso Octane
 gregtech.material.tributylamine=Tributylamine
 gregtech.material.carbon_sulfide=Carbon Sulfide
