--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -349,18 +349,18 @@ metaitem.nak_coolant_cell.name=NaK Coolant Cell
 
 
 gregtech.material.damp_bromine=Damp Bromine
-gregtech.material.brominated_brine=Damp Bromine
-gregtech.material.salt_free_brine=Damp Bromine
-gregtech.material.boron_free_solution=Damp Bromine
-gregtech.material.potassium_magnesium_salts=Damp Bromine
-gregtech.material.sodium_salts=Damp Bromine
-gregtech.material.calcium_salts=Damp Bromine
-gregtech.material.lithium_chloride_solution=Damp Bromine
-gregtech.material.iodized_brine=Damp Bromine
-gregtech.material.iodine_slurry=Damp Bromine
-gregtech.material.brine=Damp Bromine
-gregtech.material.crude_bromine_solution=Damp Bromine
-gregtech.material.concentrated_brine=Damp Bromine
+gregtech.material.brominated_brine=Brominated Brine
+gregtech.material.salt_free_brine=Salt Free Brine
+gregtech.material.boron_free_solution=Boron Free Solution
+gregtech.material.potassium_magnesium_salts=Potassium Magnesium Salts
+gregtech.material.sodium_salts=Sodium Salts
+gregtech.material.calcium_salts=Calcium Salts
+gregtech.material.lithium_chloride_solution=Lithium Chloride Solution
+gregtech.material.iodized_brine=Iodized Brine
+gregtech.material.iodine_slurry=Iodine Slurry
+gregtech.material.brine=Brine
+gregtech.material.crude_bromine_solution=Crude Bromine Solution
+gregtech.material.concentrated_brine=Concentrated Brine
 gregtech.material.iso_octane=Iso Octane
 gregtech.material.tributylamine=Tributylamine
 gregtech.material.carbon_sulfide=Carbon Sulfide
