--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -335,13 +335,7 @@ metaitem.syringe.name=Syringe
 metaitem.sterilized_syringe.name=Sterilized Syringe
 metaitem.sheep_blood_syringe.name=Sheep Blood Syringe
 metaitem.lithium_sieve.name=Lithium Sieve
-metaitem.lithium_saturated_sieve_lithium.name=Lithium Saturated Litium Sieve
-metaitem.boron_saturated_yarn.name=Boron Saturated Yarn
-metaitem.boron_retaining_yarn.name=Boron Retaining Yarn
-metaitem.coolant_cell.name=Coolant Cell
-metaitem.nak_coolant_cell.name=NaK Coolant Cell
 metaitem.cotton.name=Cotton
-metaitem.lithium_sieve.name=Lithium Sieve
 metaitem.lithium_saturated_sieve_lithum.name=Lithium Saturated Lithium Sieve
 metaitem.boron_saturated_yarn.name=Boron Saturated Yarn
 metaitem.boron_retaining_yarn.name=Boron Retaining Yarn
@@ -353,18 +347,82 @@ metaitem.nak_coolant_cell.name=NaK Coolant Cell
 
 
 #Materials
-
-gregtech.material.one_butane=1-Butane
-gregtech.material.triethylaluminium=Triethylaluminium
-gregtech.material.trimethylaluminium=Trimethylaluminium
+gregtech.material.trimethyltin_chloride=Trimethyltin Chloride
+gregtech.material.phenylpentanoicacid=Phenylpentanoicacid
+gregtech.material.aluminium_hydride=Aluminium Hydride
+gregtech.material.lithium_iodide=Lithium Iodide
+gregtech.material.pcba=PCBA
+gregtech.material.silver_chloride=Silver Chloride
+gregtech.material.boron_fluoride=Boron Fluoride
+gregtech.material.silver_oxide=Silver Oxide
+gregtech.material.silvertetrafluoroborate=Silvertetrafluoroborate
+gregtech.material.boron_oxide=Boron Oxide
+gregtech.material.phosgene=Phosgene
+gregtech.material.isopropyl_alcohol=Isopropyl Alcohol
+gregtech.material.diisopropylcarbodiimide=Diisopropylcarbodiimide
+gregtech.material.pyridine=Pyridine
+gregtech.material.dimethylaminopyridine=Dimethylaminopyridine
+gregtech.material.dichloromethane=Dichloromethane
+gregtech.material.pcbs=PCBS
+gregtech.material.iron_chloride=Iron Chloride
+gregtech.material.benzoyl_chloride=Benzoyl Chloride
+gregtech.material.benzoyl_peroxide=Benzoyl Peroxide
+gregtech.material.hydrazine=Hydrazine
+gregtech.material.hydroiodic_acid=Hydroiodic Acid
+gregtech.material.acrylo_nitrile=Acrylo Nitrile
+gregtech.material.lithium_aluminium_hydride=Lithium Aluminium Hydride
+gregtech.material.iron2_chloride=Iron2Chloride
+gregtech.material.pd_ir_re_o_ce_os=Pd Ir Re OCe OS
+gregtech.material.ferrocene=Ferrocene
+gregtech.material.sarcosine=Sarcosine
+gregtech.material.ferrocenylfulleropyrrolidine=Ferrocenylfulleropyrrolidine
+gregtech.material.methylamine=Methylamine
+gregtech.material.alumino_silicate_wool=Alumino Silicate Wool
+gregtech.material.pd_fullerene_matrix=Pd Fullerene Matrix
+gregtech.material.dimethylsulfide=Dimethylsulfide
+gregtech.material.potassium_permanganate=Potassium Permanganate
+gregtech.material.hydrogen_cyanide=Hydrogen Cyanide
+gregtech.material.sodium_cyanide=Sodium Cyanide
+gregtech.material.sodium_bromide=Sodium Bromide
+gregtech.material.hydrobromic_acid=Hydrobromic Acid
+gregtech.material.rhodium_filter_cake_solution=Rhodium Filter Cake Solution
+gregtech.material.cyanonaphthalene=Cyanonaphthalene
+gregtech.material.disodium_phosphate=Disodium Phosphate
+gregtech.material.tin_chloride=Tin Chloride
+gregtech.material.naphthaldehyde=Naphthaldehyde
+gregtech.material.ethyl_benzene=Ethyl Benzene
+gregtech.material.methylbenzophenanthrene=Methylbenzophenanthrene
+gregtech.material.potassium_cyanide=Potassium Cyanide
+gregtech.material.bromosuccinimide=Bromosuccinimide
+gregtech.material.benzophenanthrenylacetonitrile=Benzophenanthrenylacetonitrile
+gregtech.material.potassium_bromide=Potassium Bromide
+gregtech.material.succinimide=Succinimide
+gregtech.material.unfolded_fullerene=Unfolded Fullerene
+gregtech.material.ti_al_chloride=Ti Al Chloride
+gregtech.material.fullerene=Fullerene
+gregtech.material.succinic_acid=Succinic Acid
+gregtech.material.thionyl_chloride=Thionyl Chloride
+gregtech.material.rhodium_nitrate=Rhodium Nitrate
+gregtech.material.rhodium_filter_cake=Rhodium Filter Cake
+gregtech.material.rhodium_salt_solution=Rhodium Salt Solution
+gregtech.material.rhodium_salt=Rhodium Salt
+gregtech.material.crude_rhodium_metal=Crude Rhodium Metal
+gregtech.material.platinum_metallic_powder=Platinum Metallic Powder
+gregtech.material.one_butane=One Butane
 gregtech.material.polymerized_styrene_butadiene_solution=Polymerized Styrene Butadiene Solution
-gregtech.material.n_butyllithium=n-Butyllithium
+gregtech.material.n_butyllithium=n Butyllithium
 gregtech.material.styrene_butadiene_solution=Styrene Butadiene Solution
 gregtech.material.zirconium_dioxide_solution=Zirconium Dioxide Solution
 gregtech.material.zirconium_chloride=Zirconium Chloride
-gregtech.material.grisium=Grisium
-gregtech.material.recrystallized_zirconium_dioxide=Recrystallized Zirconium Dioxide
+gregtech.material.trimethyl_aluminium=Trimethyl Aluminium
 gregtech.material.methyl_aluminoxane=Methyl Aluminoxane
+gregtech.material.recrystallized_zirconium_dioxide=Recrystallized Zirconium Dioxide
+gregtech.material.triethyl_aluminium=Triethyl Aluminium
+gregtech.material.benzylbromide=Benzylbromide
+gregtech.material.sodium_sulfide_dichloro_benzene_mixture=Sodium Sulfide Dichloro Benzene Mixture
+gregtech.material.triethylaluminium=Triethylaluminium
+gregtech.material.trimethylaluminium=Trimethylaluminium
+gregtech.material.grisium=Grisium
 gregtech.material.nitrogenized_caprolactam=Nitrogenized Caprolactam
 gregtech.material.iodine_slurry=Iodine Slurry
 gregtech.material.boron_free_solution=Boron Free Solution
@@ -576,7 +634,6 @@ gregtech.material.nanotube_deposition_mix=Nanotube Deposition Mix
 gregtech.material.doped_nanotube_deposition_mixture=Doped Nanotube Deposition Mixture
 gregtech.material.carbon_nanotubes=Carbon Nanotubes
 gregtech.material.awakened_draconium=Awakened Draconium
-gregtech.material.adamantium=Adamantium
 gregtech.material.pikyonium=Pikyonium
 gregtech.material.comsic_neutronium=Cosmic Neutronium
 gregtech.material.infinity=Infinity
@@ -589,8 +646,7 @@ gregtech.material.sodium_ethoxide=Sodium Ethoxide
 gregtech.material.potassium_manganate=Potassium Manganate
 gregtech.material.aluminium_chloride=Aluminium Chloride
 gregtech.material.cucrmgba_catalyst=CuCrMgBa Catalyst
-gregtech.material.photopolymer=Photopolymer
-gregtech.material.bio_plastic=Bio Plastic
+1gregtech.material.bio_plastic=Bio Plastic
 gregtech.material.ethylenediamine=Ethylenediamine
 gregtech.material.cupriavidus_necator=Cupriavidus Necator
 gregtech.material.cupriavidus_necator_bacteria_sample=Cupriavidus Necator Bacteria Sample
