fix Localization of Naphthal Dehyde

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -354,7 +354,7 @@ gregtech.material.benzyol_peroxide=Benzyol Peroxide
 gregtech.material.benzyol_chloride=Benzyol Chloride
 gregtech.material.iron_2_chloride=Iron II Chloride
 gregtech.material.dimethyl_sulfide=Dimethyl Sulfide
-gregtech.material.napthal_dehyde=Napthal Dehyde
+gregtech.material.naphthal_dehyde=Naphthal Dehyde
 gregtech.material.zirconium_chlorine=Zirconium Chloride
 gregtech.material.bio_plastic=Bio Plastic
 gregtech.material.trimethyltin_chloride=Trimethyltin Chloride
