--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -361,9 +361,44 @@ metaitem.uva_lamp_core.name=UVA Lamp Core
 
 
 
-
-
-
+gregtech.material.cyclooctadiene=Cyclooctadiene
+gregtech.material.isochloropropane=Isochloropropane
+gregtech.material.resorcinol=Resorcinol
+gregtech.material.sodium_acetate=Sodium Acetate
+gregtech.material.amine_mixture=Amine Mixture
+gregtech.material.trimethylamine=Trimethylamine
+gregtech.material.cetane_trimethyl_ammonium_bromide=Cetane Trimethyl Ammonium Bromide
+gregtech.material.dinitrodipropanyloxybenzene=Dinitrodipropanyloxybenzene
+gregtech.material.lithium_titanate=Lithium Titanate
+gregtech.material.lithium_carbonate_solution=Lithium Carbonate
+gregtech.material.lithium_peroxide=Lithium Peroxide
+gregtech.material.nitrogen_pentoxide=Nitrogen Pentoxide
+gregtech.material.oct_1_ene=Oct-1-ene
+gregtech.material.mercaptorphenol=Mercaptophenol
+gregtech.material.ortho_xylene=Ortho-Xylene
+gregtech.material.ortho_xylene_zeolite_mixture=Ortho-Xylene Zelite Mixture
+gregtech.material.chlorodiisopropyl_phosphine=Chlorodiisopropyl Phosphine
+gregtech.material.para_xylene=Para-Xylene
+gregtech.material.iridium_cyclooctadienyl_chloride_dimer=Iridium Cyclooctadienyl Chloride Dimer
+gregtech.material.dibromomethylbenzene=Dibromomethylbenzene
+gregtech.material.pd_c_catalyst=PdC Catalyst
+gregtech.material.pre_zylon=Pre Zylon
+gregtech.material.terephthalaldehyde=Terephthalaldehyde
+gregtech.material.sodium_oxide=Sodium Oxide
+gregtech.material.sodium_phosphotungstate=Sodium Phopshotungstate
+gregtech.material.ammonium_persulfate=Ammonium Persulfate
+gregtech.material.sodium_phosphomolybdate=Sodium Phosphomolybdate
+gregtech.material.dehydragenation_catalyst=Dehydragenation Catalyst
+gregtech.material.beryllium_fluoride=Beryllium Fluoride
+gregtech.material.magnesium_sulfate=Magnesium Sulfate
+gregtech.material.potassium_fluoride=Potassium Fluoride
+gregtech.material.sodium_fluoride=Sodium Fluoride
+gregtech.material.au_pd_c_catalyst=AuPdC Catalyst
+gregtech.material.titanium_nitrate=Titanium Nitrate
+gregtech.material.polystyrene_nano_particles=Polystyrene Nanoparticles
+gregtech.material.potassium_sulfate=Potassium Sulfate
+gregtech.material.zylon=Zylon
+gregtech.material.toluene_diisocyanate=Toluene Diisocyanate
 gregtech.material.fluorohydride_ammonium_carbama=Fluorohydride Ammonium Carbama
 gregtech.material.hydrogenated_carbon_tetrafluoride=Hydrogenated Carbon Tetrafluoride
 gregtech.material.hydrofluoric_methane=Hydrofluoric Methane
