--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -824,3 +824,29 @@ gregtech.material.acetic_anhydride=Acetic Anhydirde
 gregtech.material.blood_cells=Blood Cells
 gregtech.material.blood_plasma=Blood
 gregtech.material.linoleic_acid=Linoleic Acid
+gregtech.material.cold_air=Cold Air
+gregtech.material.supercooled_liquid_nitrogen=Supercooled Liquid Nitrogen
+gregtech.material.untreated_liquid_oxygen=Untreated Liquid Oxygen
+gregtech.material.cold_waste_gaseous_nitrogen=Cold Waste Gaseous Nitrogen
+gregtech.material.cold_gaseous_nitrogen=Cold Gaseous Nitrogen
+gregtech.material.argon_rich_gas=Argon Rich Gas
+gregtech.material.crude_argon_vapor=Crude Argon Vapor
+gregtech.material.supercooled_oxygen=Supercooled Oxygen
+gregtech.material.liquid_waste_nitrogen=Liquid Waste Nitrogen
+gregtech.material.rare_gas_rich_gaseous_nitrogen=Rare Gas Rich Gaseous Nitrogen
+gregtech.material.rare_gas_mixture=Rare Gas Mixture
+gregtech.material.liquid_krypton=Liquid Krypton
+gregtech.material.nitrogen_stripped_rare_gas_mixture=Nitrogen Stripped Rare Gas Mixture
+gregtech.material.crude_krypton=Crude Krypton
+gregtech.material.crude_neon=Crude Neon
+gregtech.material.crude_helium=Crude Helium
+gregtech.material.crude_xenon=Crude Xenon
+gregtech.material.crude_argon=Crude Argon
+gregtech.material.partially_liquid_krypton=Partially Liquid Krypton
+gregtech.material.partially_liquid_neon=Partially Liquid Neon
+gregtech.material.partially_liquid_helium=Partially Liquid Helium
+gregtech.material.partially_liquid_xenon=Partially Liquid Xenon
+gregtech.material.partially_liquid_argon=Partially Liquid Argon
+gregtech.material.liquid_argon=Liquid Argon
+gregtech.material.liquid_neon=Liquid Neon
+gregtech.material.cold_gaseous_oxygen=Cold Gaseous Oxygen
