add Bastnasite Processing

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -362,6 +362,39 @@ metaitem.alumino_silicate_wool_sheet.name=Alumino Silicate Wool Sheet
 
 #Materials
 
+gregtech.material.calcinated_bastnasite=Calcinated Bastnasite
+gregtech.material.calcinated_silicon_dioxide=Calcinated Silicon Dioxide
+gregtech.material.calcinated_residues=Calcinated Residues
+gregtech.material.calcium_dioxide=Calcium Dioxide
+gregtech.material.deoxygenation_catalyst=Deoxygenation Catalyst
+gregtech.material.bastnasite_oxide_composite=Bastnasite Oxide Composite
+gregtech.material.sodium_nitride=Sodium Nitride
+gregtech.material.bastnasite_byproducts=Bastnasite Slag
+gregtech.material.samaric_rare_earth_concentrate=Samaric Rare Earth Concentrate
+gregtech.material.hydrogenation_catalyst=Dehydrogenation Catalyst
+gregtech.material.neodymium_rare_earth_concentrate=Neodymium Rare Earth Concentrate
+gregtech.material.neodymium_oxide=Neodymium Oxide
+gregtech.material.lanthanum_oxide=Lanthanum Oxide
+gregtech.material.samarium_rare_earth_concentrate=Samarium Rare-Earth Concentrate
+gregtech.material.samarium_oxide=Samarium Oxide
+gregtech.material.holmium_oxide=Holmium Oxide
+gregtech.material.holmium_fluoride=Holmium Fluoride
+gregtech.material.calcium_fluoride=Calcium Fluoride
+gregtech.material.muddy_bastnasite_solution=Muddy Bastnasite Solution
+gregtech.material.muddy_water=Muddy Water
+gregtech.material.bastnasite_rarer_earth_oxides_solution=Bastnasite Rarer Earth Oxides Solution
+gregtech.material.diluted_bastnasite_mud=Diluted Bastnasite Mud
+gregtech.material.filtered_bastnasite_mud=Filtered Bastnasite Mud
+gregtech.material.bastnasite_concentrate=Bastnasite Concentrate
+gregtech.material.cerium_rich_bastnasite_concentrate=Cerium Rich Bastnasite Concentrate
+gregtech.material.acidic_bastnasite_concentrate=Acidic Bastnasite Concentrate
+gregtech.material.acidic_cerium_based_mud=Acidic Cermium Base Mud
+gregtech.material.bastnasite_rarer_earth_oxides_mixture=Bastnasite Rarer-Earth Oxides Mixture
+gregtech.material.dried_bastnasite_rarer_earth_oxides_pulp=Dried Bastnasite Rarer-Earth Oxides Pulp
+gregtech.material.bastnasite_rarer_earth_oxides_emulsion=Bastnasite Rarer-Earth Oxides Emulsion
+gregtech.material.samarium_reduced_rarer_earth_oxides=Samarium Reduced Rarer-Earth Oxides
+gregtech.material.diluted_aqua_regia=Diluted Aqua Regia
+gregtech.material.conditioned_bastnasite_mud=Conditioned Bastnasite Mud
 gregtech.material.kevlar_blend=Kevlar Blend
 gregtech.material.kevlar_concentrate=Kevlar Concentrate
 gregtech.material.magnesium_chloride_solution=Magnesium Chloride Solution
