--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -454,7 +454,7 @@ gregtech.material.nitrogen_pentoxide=Nitrogen Pentoxide
 gregtech.material.oct_1_ene=Oct-1-ene
 gregtech.material.mercaptophenol=Mercaptophenol
 gregtech.material.ortho_xylene=Ortho-Xylene
-gregtech.material.ortho_xylene_zeolite_mixture=Ortho-Xylene Zelite Mixture
+gregtech.material.ortho_xylene_zeolite_mixture=Ortho-Xylene Zeolite Mixture
 gregtech.material.chlorodiisopropyl_phosphine=Chlorodiisopropyl Phosphine
 gregtech.material.para_xylene=Para-Xylene
 gregtech.material.iridium_cyclooctadienyl_chloride_dimer=Iridium Cyclooctadienyl Chloride Dimer
@@ -985,6 +985,46 @@ gregtech.material.stannic_chloride=Stannic Chloride
 gregtech.material.rubidium_chlorostannate=Rubidium Chlorostannate
 gregtech.material.caesium_chlorostannate=Caesium Chlorostannate
 gregtech.material.hra_magnesium=Highly Reactive Activated Magnesium
+gregtech.material.zinc_chloride=Zinc Chloride
+gregtech.material.dried_monazite_filtrate=Dried Monazite Filtrate
+gregtech.material.europium_oxide=Europium Oxide
+gregtech.material.cerium_oxide_filtrate=Cerium Oxide Filtrate
+gregtech.material.thorium_concentrate=Thorium Concentrate
+gregtech.material.rare_earth_filtrate=Rare Earth Filtrate
+gregtech.material.gadolinium_oxide=Gadolinium Oxide
+gregtech.material.monazite_rarer_earth_filtrate=Monazite Rarer-Earth Filtrate
+gregtech.material.chlorinated_monazite_filtrate=Chlorinated Monazite Filtrate
+gregtech.material.wet_hafnium_zirconium_blend=Wet Hafnium Zirconium Blend
+gregtech.material.hafnium_zirconium_blend=Hafnium Zirconium Blend
+gregtech.material.hafnium_oxide=Hafnium Oxide
+gregtech.material.saturated_chlorinated_monazite_filtrate=Saturated Monazite Filtrate
+gregtech.material.monazite_sulfide=Monazite Sulfide
+gregtech.material.roasted_hafnium_zirconium_slag=Roasted Hafnium Zirconium Slag
+gregtech.material.zirconium_oxide=Zirconium Oxide
+gregtech.material.rutherfordium_oxide=Rutherfordium Oxide
+gregtech.material.thorium_phoshpate_cake=Thorium Phosphate Cake
+gregtech.material.uranium_filtrate=Uranium Filtrate
+gregtech.material.amido_ethyl_alkyl_imidazole=Amido-Ethyl Alkyl Imidazole
+gregtech.material.diacetone_alcohol=Diacetone Alcohol
+gregtech.material.hexadecanol=Hexadecanol
+gregtech.material.palmatic_acid=Palmatic Acid
+gregtech.material.ziegler_alfol_mixture=Ziegler Alfol Mixture
+gregtech.material.octanol=Octanol
+gregtech.material.dodecanol=Dodecanol
+gregtech.material.monazite_solution=Monazite Solution
+gregtech.material.muddy_monazite_solution=Muddy Monazite Solution
+gregtech.material.decanol=Decanol
+gregtech.material.hexanol=Hexanol
+gregtech.material.caprylic_acid=Caprylic Acid
+gregtech.material.monazite_ore_byproduct_slurry=Monazite Ore Byproduct Slurry
+gregtech.material.impure_monazite_ore_byproduct_slurry=Impure Monazite Ore Byproduct Slurry
+gregtech.material.muddy_monazite_ore_byproducts=Muddy Monazite Ore Byproducts
+gregtech.material.diluted_cerium_filtrate=Diluted Cerium Filtrate
+gregtech.material.cooled_rare_earth_filtrate=Cooled Rare Earth Filtrate
+gregtech.material.neutralized_rare_earth_filtrate=Neutralized Rare Earth Filtrate
+gregtech.material.diluted_monazite_sulfide=Diluted Monazite Sulfide
+gregtech.material.methyl_isobutyl_carbonyl=Methyl Isobutyl Carbonyl
+gregtech.material.tetradecanol=Tetradecanol
 
 
 # Second Degree Materials
