--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -426,7 +426,7 @@ gregtech.material.terephthalic_acid=Terephthalic Acid
 gregtech.material.terephthaloyl_chloride=Terephthaloyl Chloride
 gregtech.material.rhenium=Rhenium
 gregtech.material.butanediol=Butanediol
-gregtech.material.gamma_butyrolactone=Gamma-Butyrolactone
+gregtech.material.gamma_butyrolactone=γ-Butyrolactone
 gregtech.material.n_methyl_pyrrolidone=N-Methyl-2-Pyrrolidone
 gregtech.material.kevlar=Kevlar
 gregtech.material.isophthalic_acid=Isophthalic Acid
@@ -822,9 +822,9 @@ gregtech.material.depleted_bacterial_growth_medium=Depleted Bacterial Growth Med
 gregtech.material.polyetheretherketone=Polyetheretherketone
 gregtech.material.ethylene_oxide=Ethylene Oxide
 gregtech.material.crushed_soybean=Crushed Soybean
-gregtech.material.hundred_methanol=100 % Methanol
-gregtech.material.hundred_butanol=100 % Butanol
-gregtech.material.hundred_ethanol=100 % Ethanol
+gregtech.material.methanol_100=100% Methanol
+gregtech.material.butanol_100=100% Butanol
+gregtech.material.ethanol_100=100% Ethanol
 gregtech.material.activated_carbon=Activated Carbon
 gregtech.material.hot_water=Hot Water
 gregtech.material.ethylene_glycol=Ethylene Glycol
