--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -363,31 +363,16 @@ metaitem.alumino_silicate_wool_sheet.name=Alumino Silicate Wool Sheet
 #Materials
 
 
-
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
-gregtech.material.silver_alloy=Silver Alloy
+gregtech.material.rarer_earth_mixture=Rarer Earth Mixture
+gregtech.material.purified_kevlar_concentrate=Purified Kevlar Concentrate
+gregtech.material.purified_scandium_leach_residues=Purified Scandium Leach Residues
+gregtech.material.exquisite_scandium_leach_residues=Exquisite Scandium Leach Residues
+gregtech.material.lanthanum_leach_solution=Lanthanum Leach Solution
+gregtech.material.lanthanum_leach_emulsion=Lanthanum Leach Emulsion
+gregtech.material.ree_group_mud=REE-Group Mud
+gregtech.material.sulfuric_residues=Sulfuric Residues
+gregtech.material.cerium_solution=Cerium Solution
+gregtech.material.cryolite=Cryolite
 gregtech.material.gadolinium_leach=Gadolinium Leach
 gregtech.material.rarer_earth_concentrate=Rarer Earth Concentrate
 gregtech.material.roasted_gadolinite_leach_solution=Roasted Gadolinite Leach Solution
@@ -438,11 +423,11 @@ gregtech.material.kevlar_blend=Kevlar Blend
 gregtech.material.kevlar_concentrate=Kevlar Concentrate
 gregtech.material.magnesium_chloride_solution=Magnesium Chloride Solution
 gregtech.material.diluted_rubidium_solution=Diluted Rubidium Solution
-gregtech.material.diluted_caesium_solution.name=Diluted Caesium Solution
-gregtech.material.blue_vitriol.name=Blue Vitriol
-gregtech.material.cadmium_rich_zinc.name=Cadmium Rich Zinc
-gregtech.material.crude_zinc.name=Crude Zinc
-gregtech.material.trace_rhenium_flue.name=Trace Rhenium Flue
+gregtech.material.diluted_caesium_solution=Diluted Caesium Solution
+gregtech.material.blue_vitriol=Blue Vitriol
+gregtech.material.cadmium_rich_zinc=Cadmium Rich Zinc
+gregtech.material.crude_zinc=Crude Zinc
+gregtech.material.trace_rhenium_fluee=Trace Rhenium Flue
 gregtech.material.zinc_oxide=Zinc Oxide
 gregtech.material.germanium_tetrachloride=Germanium Tetrachloride
 gregtech.material.germanium_dioxide=Germanium Dioxide
